# hie

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.api  Dockerfile.dev  Dockerfile.manager  LICENSE  LICENSE-COMMERCIAL  Makefile  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v1.9.1.md  docker-compose.dev.yml  docker-compose.full.yml  docker-compose.minimal.yml  docker-compose.yml  fix_session_id_flow.md  pyproject.toml  requirements.txt  setup.py
Engine/: __init__.py  cli.py  factory.py
Engine/api/: __init__.py  models.py  repositories.py  server.py
Engine/auth/: dependencies.py  models.py  router.py  security.py
Engine/core/: __init__.py  config.py  config_loader.py  executors.py  item.py  message.py  message_envelope.py  messaging.py  meta_instantiation.py  production.py  queues.py  route.py  schema.py
Engine/custom/: __init__.py
Engine/items/: __init__.py
Engine/li/: __init__.py  __main__.py
Engine/parsers/: __init__.py  hl7v2.py
Engine/persistence/: __init__.py  base.py  memory.py  postgresql.py  redis_store.py
Portal/: .dockerignore  .gitignore  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
agent-runner/: Dockerfile  requirements.txt
agent-runner/app/: agent.py  config.py  events.py  hooks.py  main.py  rate_limiter.py  roles.py  skills.py  tools.py
agent-runner/tests/: __init__.py
codex-runner/: Dockerfile  package.json  tsconfig.json
codex-runner/src/: server.ts
config/: example.yaml  production.yaml
config/examples/: adt-integration.json
docs/: ARCHITECTURE_QA_REVIEW.md  CONFIGURATION_REFERENCE.md  DEVELOPER_WORKFLOW_SCENARIOS.md  DOCUMENTATION_UPDATE_CHECKLIST.md  DUE_DILIGENCE_SUMMARY.md  ENTERPRISE_TOPOLOGY_EXECUTIVE_SUMMARY.md  FEATURE_SPEC.md  FULLSTACK_INTEGRATION_DESIGN.md  IMPLEMENTATION_OPTIMIZATION_PLAN.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_STATUS.md  INDEX.md  LI_ENGINE_PHASE2_STATUS.md  LI_ENGINE_PHASE3_STATUS.md  LI_ENGINE_PHASE4_STATUS.md  MANDATORY_IMPLEMENTATION_GUIDELINES.md  MESSAGE_MODEL_IMPLEMENTATION_COMPLETE.md  MESSAGE_MODEL_SESSION_ANALYSIS.md  MIGRATION_GUIDE_v0.3.md  PRODUCT_ROADMAP.md  PRODUCT_VISION.md  RELEASE_NOTES.md  RELEASE_NOTES_v1.7.4.md  RELEASE_NOTES_v1.7.5.md  RELEASE_v1.8.2_SUMMARY.md  REQUIREMENTS_SPEC.md  RESTRUCTURE_v0.3_DETAILED.md  ROADMAP.md  SEQUENCE_DIAGRAM_DELIVERY.md  SESSION_ID_DESIGN.md  SESSION_ID_IMPLEMENTATION_SUMMARY.md  TESTING.md  TESTING_SEQUENCE_DIAGRAM.md  UI_CONFIGURATION_GUIDE.md
hie/: cli.py  factory.py
portal/: Dockerfile  tsconfig.tsbuildinfo
prompt-manager/: Dockerfile  alembic.ini
scripts/: http_echo.py  init-db.sql  mllp_echo.py  port-skills-to-codex.sh  run_e2e_tests.sh  sync-version.sh  test_genai_features.sh  verify_session_propagation.sh
tests/: __init__.py
(+326 files in other folders)
